src/objects/QNews__c.object
<CustomObject>
    <description>Container for published version comments for Customer Care knowledge articles</description>
    <fields>
        <fullName>Article_ID__c</fullName>
        <description>Source is Article Type_kav.KnowledgeArticleId</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Article ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Link__c</fullName>
        <formula>HYPERLINK(&quot;/articles/&quot;&amp;  LEFT(Article_Type__c,(find(&quot;__kav&quot;, Article_Type__c ))-1) &amp;&quot;/&quot;&amp;Article_URL__c, Article_Title__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Article Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Title__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Article Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Article Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_URL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Article URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Article_Version_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Article Version Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Best_Practice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Best Practice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Category_Group__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Data Category Group</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Category_Selection_Id__c</fullName>
        <description>Source from Article Type_DataCategorySelection.Id</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Data Category Selection Id</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Data_Category__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Data Category</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Federal_Compliance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Federal Compliance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ForSharePointService__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ForSharePointService</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Published__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Published</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>QNews_Display__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check box in order to display in QNews feed.</inlineHelpText>
        <label>QNews Display</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State_Compliance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>State Compliance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Version_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Version Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Version_History_Id__c</fullName>
        <description>Source from Article Type_VersionHistory.Id</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Version History Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version_History_Parent_Id__c</fullName>
        <description>Source from Article Type_VersionHistory.ParentId</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Version History Parent Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version_History_Version_Id__c</fullName>
        <description>Sourced from Article Type_VersionHistory.VersionId</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Version History Version Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>QNews</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Article_Link__c</columns>
        <columns>Version_Comments__c</columns>
        <columns>Article_Type__c</columns>
        <columns>Last_Published__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <group>Quest_Knowledge_Administrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_News_in_Last_30_Days</fullName>
        <columns>Article_Link__c</columns>
        <columns>Version_Comments__c</columns>
        <columns>Last_Published__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Data_Category_Group__c</field>
            <operation>equals</operation>
            <value>Vision_Care</value>
        </filters>
        <filters>
            <field>Last_Published__c</field>
            <operation>greaterThan</operation>
            <value>11/7/2014 12:00 AM</value>
        </filters>
        <filters>
            <field>QNews_Display__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All News in Last 30 Days</label>
    </listViews>
    <listViews>
        <fullName>All_News_in_Last_365_Days</fullName>
        <columns>Article_Link__c</columns>
        <columns>Version_Comments__c</columns>
        <columns>Last_Published__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Data_Category_Group__c</field>
            <operation>equals</operation>
            <value>Vision_Care</value>
        </filters>
        <filters>
            <field>Last_Published__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:365</value>
        </filters>
        <filters>
            <field>QNews_Display__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All News in Last 365 Days</label>
    </listViews>
    <listViews>
        <fullName>Vault_News_Last_30_Days</fullName>
        <columns>Article_Link__c</columns>
        <columns>Version_Comments__c</columns>
        <columns>Last_Published__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Article_Type__c</field>
            <operation>equals</operation>
            <value>Procedure__kav</value>
        </filters>
        <filters>
            <field>Last_Published__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Vault News Last 30 Days</label>
        <sharedTo>
            <group>The_Vault_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Workarounds</fullName>
        <columns>Article_Link__c</columns>
        <columns>Version_Comments__c</columns>
        <columns>Last_Published__c</columns>
        <columns>QNews_Display__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Article_Title__c</field>
            <operation>contains</operation>
            <value>Workarounds</value>
        </filters>
        <label>Workarounds</label>
    </listViews>
    <nameField>
        <displayFormat>QN-{0}</displayFormat>
        <label>QNews ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QNews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>